--- a/smart_thrift_frontend/src/styles/pages/users.css
+++ b/smart_thrift_frontend/src/styles/pages/users.css
@@ -18,10 +18,15 @@
 
 main > section.filter-area {
   display: flex;
+  align-items: center;
 }
 
 section.filter-area > div.search {
   flex: 1;
+}
+
+section.filter-area > div.search > .search-box {
+  border-radius: 0.25rem;
 }
 
 section.filter-area > div.filter {
@@ -57,9 +62,11 @@ div.table-body p {
   overflow: hidden;
 }
 
-div.table-head > .name,
-div.table-body .name {
-  width: 25%;
+div.table-head > .first-name,
+div.table-body .first-name,
+div.table-head > .last-name,
+div.table-body .last-name {
+  width: 15%;
 }
 
 div.table-head > .serial-number,
@@ -82,10 +89,6 @@ div.table-body .role {
   width: 20%;
 }
 
-div.table-head > h4 div.table-body h4 {
-  width: 20%;
-}
-
 section.users-table > div.table-head,
 section.users-table > div.table-body > div.table-row {
   display: flex;
@@ -98,6 +101,7 @@ section.users-table > div.table-head {
   border: 2px solid #f0f0f0;
   background-color: #f5f5f5;
   border-radius: 0.25rem 0.25rem 0 0;
+  padding: 0.5rem 0.75rem;
 }
 
 section.users-table > div.table-body {
@@ -105,14 +109,14 @@ section.users-table > div.table-body {
   border-radius: 0 0 0.25rem 0.25rem;
   color: #555;
   max-height: 80%;
-  padding: 0.75rem 0.5rem;
+  padding: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
 /* Table Body */
 section.users-table > div.table-body > div.table-row {
   border-bottom: 2px solid #f0f0f0;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
   border-radius: 0;
 }
 
@@ -145,9 +149,30 @@ main > section.pagination-area > div.pagination-btn {
   margin-left: 2rem;
 }
 
+main > section.pagination-area > div.pagination-btn {
+  display: flex;
+  align-items: center;
+}
+
 main > section.pagination-area > div.pagination-btn > button {
   margin: 0 0.5rem;
   display: flex;
   cursor: pointer;
+}
+
+main > section.pagination-area > div.pagination-btn > div.page-btns {
+  display: flex;
   align-items: center;
+}
+
+main > section.pagination-area > div.pagination-btn > div.page-btns > button {
+  padding: 0.25rem 0.5rem;
+  background-color: #fff;
+  box-shadow: 0 0 3px 0.5px rgba(0, 0, 0, 0.3);
+  margin: 0 0.25rem;
+}
+
+main > section.pagination-area > div.pagination-btn > div.page-btns > button.active{
+  background-color: var(--theme-blue);
+  color: #f0f0f0;
 }
