--- a/smart_thrift_frontend/src/styles/pages/users.css
+++ b/smart_thrift_frontend/src/styles/pages/users.css
@@ -1,6 +1,7 @@
 .users {
   padding: 2rem 0;
   height: 100%;
+  user-select: none;
 }
 
 .users > header > h2 {
@@ -57,7 +58,8 @@ main > section.users-table {
 /* Table Head */
 
 div.table-head > h4,
-div.table-body p {
+div.table-body p,
+div.table-body div.actions {
   margin-right: 1rem;
   overflow: hidden;
 }
@@ -81,7 +83,12 @@ div.table-body .actions {
 
 div.table-head > .status,
 div.table-body .status {
-  width: 20%;
+  width: 15%;
+}
+
+div.table-head > .slot,
+div.table-body .slot {
+  width: 10%;
 }
 
 div.table-head > .role,
@@ -95,6 +102,7 @@ section.users-table > div.table-body > div.table-row {
   text-align: left;
   padding: 0.5rem;
   border-radius: 0.25rem;
+  /* cursor: pointer; */
 }
 
 section.users-table > div.table-head {
@@ -111,6 +119,7 @@ section.users-table > div.table-body {
   max-height: 80%;
   padding: 0.5rem;
   padding-bottom: 0.5rem;
+  overflow: hidden;
 }
 
 /* Table Body */
@@ -133,9 +142,11 @@ div.table-body .actions > ul > li {
 }
 div.table-body .actions > ul > li.delete {
   color: var(--danger);
+  cursor: pointer;
 }
 div.table-body .actions > ul > li.edit {
   color: var(--warning);
+  cursor: pointer;
 }
 
 main > section.pagination-area {
@@ -158,6 +169,12 @@ main > section.pagination-area > div.pagination-btn > button {
   margin: 0 0.5rem;
   display: flex;
   cursor: pointer;
+  padding: 0.25rem;
+  border: 2px solid var(--text-dark);
+}
+
+main > section.pagination-area > div.pagination-btn > button.btn-hide {
+  visibility: hidden;
 }
 
 main > section.pagination-area > div.pagination-btn > div.page-btns {
@@ -172,7 +189,11 @@ main > section.pagination-area > div.pagination-btn > div.page-btns > button {
   margin: 0 0.25rem;
 }
 
-main > section.pagination-area > div.pagination-btn > div.page-btns > button.active{
+main
+  > section.pagination-area
+  > div.pagination-btn
+  > div.page-btns
+  > button.active {
   background-color: var(--theme-blue);
   color: #f0f0f0;
 }
